Updated paths in .gitignore included .env file with config settings.

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,25 @@
 # Application
-web/app/plugins/*
-!web/app/plugins/.gitkeep
-web/app/mu-plugins/*
-!web/app/mu-plugins/.gitkeep
-web/app/upgrade
-web/app/uploads/*
-!web/app/uploads/.gitkeep
-!web/app/mu-plugins/disallow-indexing.php
-!web/app/mu-plugins/register-theme-directory.php
-!web/app/mu-plugins/bedrock-autoloader.php
+public_html/app/plugins/*
+!public_html/app/plugins/.gitkeep
+public_html/app/mu-plugins/*
+!public_html/app/mu-plugins/.gitkeep
+public_html/app/upgrade
+public_html/app/uploads/*
+!public_html/app/uploads/.gitkeep
+!public_html/app/mu-plugins/disallow-indexing.php
+!public_html/app/mu-plugins/register-theme-directory.php
+!public_html/app/mu-plugins/bedrock-autoloader.php
 
 # WordPress
-web/wp
-web/.htaccess
+public_html/wp
+public_html/.htaccess
 
 # WP-CLI
 db-sync
 sql-dump-*.sql
 
 # Dotenv
-.env
+!.env
 .env.*
 !.env.example
 
